# google-ads-mcp

./: .gitignore  pyproject.toml
ads_mcp/: server.py  utils.py
ads_mcp/resources/: __init__.py  discovery.py  metrics.py  release_notes.py  segments.py
tests/resources/: __init__.py  discovery_test.py  metrics_test.py  release_notes_test.py  segments_test.py
tests/smoke/: generate_golden.py  golden_resources_list.json  llm_cases.json  llm_sender.py  smoke_test.py  smoke_utils.py  test_token_usage.py
